--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="../css_fils/master.css">
+    <link rel="stylesheet" href="./css_fils/master.css">
     <title>social media site</title>
 </head>
 <body>
@@ -125,9 +125,10 @@
     <div class="massege-setting center-fixed">
         <p>should log in for enjoy of more from advantages</p>
     </div>
-    <script src="../javascript_fils/main.js" type="module"></script>
+    <script src="./javascript_fils/main.js" type="module"></script>
 </body>
 </html>
+
 
 
 
